Manual merge fixes for 1.3.0+mc1.20